# fastapi_mini

./: .gitignore  .pre-commit-config.yaml  alembic.ini  pyproject.toml
.github/workflows/: checks.yml
alembic/: env.py
alembic/versions/: 2087b951e000_add_field_is_deleted.py  39f1c1cebd6b_fixed_autoincrement.py  77e752dc5fca_.py  86441e8dfa0b_create_test_model.py  9aca449a376b_create_initial_tables.py  f78fa2fa9681_init.py  fc8ebd8b019d_fixed_datetime.py
app/: crud.py  database.py  db.py  main.py  models.py  schemas.py
app/core/: config.py  dev.py  prod.py  security.py
app/crud/: accounts_crud.py  analysis_crud.py  transactions_crud.py  users_crud.py
app/routes/: accounts.py  analysis.py  transactions.py  users.py
app/tests/: conftest.py  test_auth.py  test_main.py
app/tests/routes/: test_accounts.py  test_transactions.py  test_user.py
